# lqa-workbench

./: .gitignore  LICENSE.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  build_info.json  tauri.conf.json
src-tauri/capabilities/: default.toml
src-tauri/parsers/: glossary_parser.py  ocr_adapter.py  severity_rules_parser.py
src-tauri/src/: ai_provider.rs  db.rs  evidence_engine.rs  export_engine.rs  image_analysis.rs  issue_lifecycle.rs  main.rs  ocr_adapter.rs  provider_router.rs  tracker_connector.rs  video_engine.rs
src/api/: tauri.ts
src/components/: AboutDialog.tsx  CommandPalette.tsx  ConfirmDialog.tsx  Dashboard.tsx  EvidenceCanvas.tsx  EvidenceEditor.tsx  Glossary.tsx  ImageAnalysis.tsx  Issues.tsx  ProjectBrain.tsx  ProjectDialog.tsx  ReferenceDocs.tsx  Settings.tsx  SettingsAI.tsx  SettingsLayout.tsx  SeverityRules.tsx  ShortcutDialog.tsx  Sidebar.tsx  StatusBar.tsx  Toast.tsx  VideoAnalysis.tsx
