[package]
name = "qaivra"
version = "0.1.0"
edition = "2021"

[package.metadata.tauri-winres]
OriginalFilename = "qaivra.exe"
InternalName = "QAIVRA"
Comments = "Professional Desktop Workbench for Game Localization QA."

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1"
keyring = "3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
